WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260532
[css-grid] css-grid/subgrid/subgrid-no-items-on-edges-002.html failing
https://bugs.webkit.org/show_bug.cgi?id=260532
Summary
[css-grid] css-grid/subgrid/subgrid-no-items-on-edges-002.html failing
Sammy Gill
Reported
2023-08-22 11:17:11 PDT
css-grid/subgrid/subgrid-no-items-on-edges-002.html is currently failing on WPT
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-22 11:17:28 PDT
<
rdar://problem/114271857
>
Sammy Gill
Comment 2
2023-10-09 16:22:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18871
EWS
Comment 3
2023-10-11 02:52:05 PDT
Committed
269194@main
(dedaa29e2a66): <
https://commits.webkit.org/269194@main
> Reviewed commits have been landed. Closing PR #18871 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug